--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ navbar-links:
     - Видеокурсы: https://www.youtube.com/user/ckpmipt
     - Видеосюжеты: https://www.youtube.com/playlist?list=PLjQl8DO6RxtcR1sdRECYNkLhKSXBATAJW
     - Проекты: http://www.chernyshev.ru/history/
-  Автор: https://ru.wikipedia.org/wiki/Чекрнышев_Сергей_Борисович
+  Автор: https://ru.wikipedia.org/wiki/Чернышев_Сергей_Борисович
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
