--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ author:
 # If you want to add a new link that isn't here, you'll need to also edit the file _data/SocialNetworks.yml
 social-network-links:
   rss: true
-  email: "info@techec.ru"
+  email: "yubeloborodov@gmail.com"
   facebook: groups/property1
 #  github: daattali
 #  twitter: daattali
