--- a/_config.yml
+++ b/_config.yml
@@ -181,6 +181,7 @@ defaults:
       layout: "post"
       comments: true  # add comments to all blog posts
       social-share: true # add social media sharing buttons to all blog posts
+      src_image:
   -
     scope:
       path: "" # all files
